--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 title: "YiiFrameWork Documentation"
 logo: /images/logo.png
 remote_theme: pmarsceill/just-the-docs
+
+# Footer content appears at the bottom of every page's main content
+footer_content: "Copyright &copy; 2010 <a href=\"https://yiipeople.com\">YiiPeople</a>"
